MainCode/force-app/main/default/objects/Loan_Account__c/Loan_Account__c.object-meta.xml
<CustomObject>
    <label>Loan Account</label>
    <nameField>
        <label>Loan Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoanAccount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>