MainCode/force-app/main/default/objects/Loan_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>