MainCode/force-app/main/default/objects/Loan_Account__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LoanAccount</relationshipLabel>
    <relationshipName>LoanAccount</relationshipName>
    <type>Lookup</type>
</CustomField>