MainCode/force-app/main/default/objects/Loan_Account__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LoanAccount (Guarantor)</relationshipLabel>
    <relationshipName>LoanAccount1</relationshipName>
    <type>Lookup</type>
</CustomField>