MainCode/force-app/main/default/objects/Loan_Account__c/fields/Loan_Plan__c.field-meta.xml
<CustomField>
    <fullName>Loan_Plan__c</fullName>
    <label>Loan Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>