MainCode/force-app/main/default/objects/Loan_Account__c/fields/Reject_reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_reason__c</fullName>
    <label>Reject reason</label>
    <type>TextArea</type>
</CustomField>