MainCode/force-app/main/default/objects/Loan_Account__c/recordTypes/rt1.recordType-meta.xml
<RecordType>
    <fullName>rt1</fullName>
    <active>true</active>
    <label>rt1</label>
</RecordType>