MainCode/force-app/main/default/objects/Loan_Account__c/validationRules/Laon_amount_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Laon_amount_rule</fullName>
    <active>false</active>
    <errorConditionFormula>Loan_amount__c    &lt;   500000</errorConditionFormula>
    <errorDisplayField>Loan_amount__c</errorDisplayField>
    <errorMessage>Loan amount should not be less than 5 lakhs.</errorMessage>
</ValidationRule>