MainCode/force-app/main/default/objects/Loan_Account__c/validationRules/Reject_Reason_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Reject_Reason_rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Loan_status__c ,&quot;Rejected&quot;) , ISPICKVAL( Reject_reason__c , &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>Reject_reason__c</errorDisplayField>
    <errorMessage>Reject reason should not be blank</errorMessage>
</ValidationRule>