MainCode/force-app/main/default/objects/Loan_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Loan_amount__c</columns>
    <columns>Loan_Plan__c</columns>
    <columns>Loan_status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>